# the-lighthouse-project

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: backend-tests.yml  docker-publish.yml  frontend-tests.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  press_freedom_index.json  regional_anchors.json  source_registry.json
backend/app/agents/: article_analyzer.py  bias_agent.py  comparator.py  crawler_agent.py  extractor.py  orchestrator.py  prompts.py  query_expander.py  source_profiler.py  source_registry.py
backend/app/agents/searchers/: _source_map.py  gnews.py  newsapi.py
backend/app/models/: article.py  bias_report.py
backend/app/services/: cache_service.py  llm_service.py
backend/tests/: test_article_analyzer.py  test_bias_agent.py  test_bias_report_models.py  test_comparator.py  test_crawler_agent.py  test_orchestrator_mock.py  test_query_expander.py  test_regional_anchors.py  test_source_profiler.py  test_source_resolution.py
docs/: ARCHITECTURE_UML.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: ArticleCard.test.tsx  LegendDialog.test.tsx  PoliticalCompass.test.tsx  RegionMap.test.tsx  RegionSelector.test.tsx  SearchBar.test.tsx  ThemeToggle.test.tsx  Toast.test.tsx  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ArticleCard.tsx  BiasReportPanel.tsx  BiasSpectrum.tsx  LegendDialog.tsx  (+8 more)
(+10 files in other folders)
