[project]
name = "lighthouse-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    # "newspaper3k>=0.2.8",   # TODO(THE-9): uncomment when implementing article text extractor
    # "trafilatura>=1.9.0",    # TODO(THE-9): alternative to newspaper3k — better JS-page support
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
